Fixes share button alignment problem

--- a/app/assets/stylesheets/pages/blog.scss
+++ b/app/assets/stylesheets/pages/blog.scss
@@ -129,22 +129,10 @@
 .shareButtons {
   display: table;
 
-  iframe {
-    vertical-align: middle;
-  }
-
-  .buttonFacebook ,
-  .buttonTwitter {
-    display: table-cell;
-    float: left;
-  }
-
-  .buttonFacebook {
-    padding-right: 5px;
-  }
-
-  .buttonTwitter {
-    padding-top: 1px;
+  // fixes aligment problem
+  .twitter-share-button[style],
+  .fb_iframe_widget { 
+    vertical-align: text-bottom !important;
   }
 }
 
